# src/api/model/models.ts
@@ -1,10 +1,13 @@
+export * from './apiCustomPostRequest';
 export * from './apiLoopGet200ResponseValue';
 export * from './apiMoodlightPostRequest';
 export * from './apiMoodlightPostRequestOneOf';
 export * from './apiMoodlightPostRequestOneOf1';
-export * from './apiMoodlightPostRequestOneOf1Color';
 export * from './apiPowerPostRequest';
 export * from './apiSettingsGet200Response';
 export * from './apiSettingsPostRequest';
 export * from './apiSleepPostRequest';
 export * from './apiStatsGet200Response';
+export * from './apiSwitchPostRequest';
+export * from './color';
+export * from './displayAction';
